# Casio-CG50-overclocker

./: CMakeLists.txt
projects/OverClocker/: Makefile  OverClocker.g3a
projects/example/: example.g3a
