cmake_minimum_required(VERSION 3.19)
project(Casio_CG50_overclocker)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/fxcg)
include_directories(include/sys)
include_directories(lib)
include_directories(lib/gcc)
include_directories(lib/gcc/sh3eb-elf)
include_directories(lib/gcc/sh3eb-elf/10.1.0)
include_directories(lib/gcc/sh3eb-elf/10.1.0/include)
include_directories(lib/gcc/sh3eb-elf/10.1.0/include-fixed)
include_directories(lib/gcc/sh3eb-elf/10.1.0/install-tools)
include_directories(lib/gcc/sh3eb-elf/10.1.0/install-tools/include)

add_executable(Casio_CG50_overclocker
        include/fxcg/app.h
        include/fxcg/display.h
        include/fxcg/file.h
        include/fxcg/heap.h
        include/fxcg/keyboard.h
        include/fxcg/misc.h
        include/fxcg/registers.h
        include/fxcg/rtc.h
        include/fxcg/serial.h
        include/fxcg/system.h
        include/sys/types.h
        include/alloca.h
        include/app.h
        include/APP_syscalls.h
        include/asm.h
        include/assert.h
        include/color.h
        include/CONVERT_syscalls.h
        include/ctype.h
        include/disp_tools.hpp
        include/display.h
        include/display_syscalls.h
        include/errno.h
        include/fxcg.h
        include/fxcg_display.h
        include/fxcg_keyboard.h
        include/fxcg_registers.h
        include/fxcg_stdlib_syscalls.h
        include/keyboard.h
        include/keyboard.hpp
        include/keyboard_syscalls.h
        include/LineEditors.hpp
        include/ListView.hpp
        include/locale.h
        include/math.h
        include/mcs.hpp
        include/MCS_syscalls.h
        include/rtc.h
        include/RTC_syscalls.h
        include/setjmp.h
        include/sprite.h
        include/STATUS_ICONS.hpp
        include/stddef.h
        include/stdio.h
        include/stdlib.h
        include/string.h
        include/StrList.hpp
        include/system.h
        include/SYSTEM_syscalls.h
        include/time.h
        include/UI.hpp
        include/unistd.h
        lib/gcc/sh3eb-elf/10.1.0/include/float.h
        lib/gcc/sh3eb-elf/10.1.0/include/gcov.h
        lib/gcc/sh3eb-elf/10.1.0/include/iso646.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdalign.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdarg.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdatomic.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdbool.h
        lib/gcc/sh3eb-elf/10.1.0/include/stddef.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdfix.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdint-gcc.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdint.h
        lib/gcc/sh3eb-elf/10.1.0/include/stdnoreturn.h
        lib/gcc/sh3eb-elf/10.1.0/include/tgmath.h
        lib/gcc/sh3eb-elf/10.1.0/include/unwind.h
        lib/gcc/sh3eb-elf/10.1.0/include/varargs.h
        lib/gcc/sh3eb-elf/10.1.0/include-fixed/limits.h
        lib/gcc/sh3eb-elf/10.1.0/include-fixed/syslimits.h
        lib/gcc/sh3eb-elf/10.1.0/install-tools/include/limits.h
        lib/gcc/sh3eb-elf/10.1.0/install-tools/gsyslimits.h
        lib/libc.a
        lib/libfxcg.a
        libexec/gcc/sh3eb-elf/10.1.0/install-tools/fixinc.sh
        libexec/gcc/sh3eb-elf/10.1.0/install-tools/fixincl.exe
        libexec/gcc/sh3eb-elf/10.1.0/install-tools/mkheaders
        libexec/gcc/sh3eb-elf/10.1.0/install-tools/mkinstalldirs
        libexec/gcc/sh3eb-elf/10.1.0/cc1.exe
        libexec/gcc/sh3eb-elf/10.1.0/cc1plus.exe
        libexec/gcc/sh3eb-elf/10.1.0/collect2.exe
        libexec/gcc/sh3eb-elf/10.1.0/liblto_plugin-0.dll
        libexec/gcc/sh3eb-elf/10.1.0/liblto_plugin.dll.a
        libexec/gcc/sh3eb-elf/10.1.0/liblto_plugin.la
        libexec/gcc/sh3eb-elf/10.1.0/lto-wrapper.exe
        libexec/gcc/sh3eb-elf/10.1.0/lto1.exe
        projects/example/src/OverClocker.c
        sh3eb-elf/bin/ar.exe
        sh3eb-elf/bin/as.exe
        sh3eb-elf/bin/ld.bfd.exe
        sh3eb-elf/bin/ld.exe
        sh3eb-elf/bin/nm.exe
        sh3eb-elf/bin/objcopy.exe
        sh3eb-elf/bin/objdump.exe
        sh3eb-elf/bin/ranlib.exe
        sh3eb-elf/bin/readelf.exe
        sh3eb-elf/bin/strip.exe
        sh3eb-elf/lib/ldscripts/sh.x
        sh3eb-elf/lib/ldscripts/sh.xbn
        sh3eb-elf/lib/ldscripts/sh.xe
        sh3eb-elf/lib/ldscripts/sh.xn
        sh3eb-elf/lib/ldscripts/sh.xr
        sh3eb-elf/lib/ldscripts/sh.xu
        sh3eb-elf/lib/ldscripts/shelf.x
        sh3eb-elf/lib/ldscripts/shelf.xbn
        sh3eb-elf/lib/ldscripts/shelf.xc
        sh3eb-elf/lib/ldscripts/shelf.xce
        sh3eb-elf/lib/ldscripts/shelf.xe
        sh3eb-elf/lib/ldscripts/shelf.xn
        sh3eb-elf/lib/ldscripts/shelf.xr
        sh3eb-elf/lib/ldscripts/shelf.xs
        sh3eb-elf/lib/ldscripts/shelf.xsc
        sh3eb-elf/lib/ldscripts/shelf.xsce
        sh3eb-elf/lib/ldscripts/shelf.xse
        sh3eb-elf/lib/ldscripts/shelf.xsw
        sh3eb-elf/lib/ldscripts/shelf.xswe
        sh3eb-elf/lib/ldscripts/shelf.xu
        sh3eb-elf/lib/ldscripts/shelf.xw
        sh3eb-elf/lib/ldscripts/shelf.xwe
        sh3eb-elf/lib/ldscripts/shl.x
        sh3eb-elf/lib/ldscripts/shl.xbn
        sh3eb-elf/lib/ldscripts/shl.xe
        sh3eb-elf/lib/ldscripts/shl.xn
        sh3eb-elf/lib/ldscripts/shl.xr
        sh3eb-elf/lib/ldscripts/shl.xu
        sh3eb-elf/lib/ldscripts/shlelf.x
        sh3eb-elf/lib/ldscripts/shlelf.xbn
        sh3eb-elf/lib/ldscripts/shlelf.xc
        sh3eb-elf/lib/ldscripts/shlelf.xce
        sh3eb-elf/lib/ldscripts/shlelf.xe
        sh3eb-elf/lib/ldscripts/shlelf.xn
        sh3eb-elf/lib/ldscripts/shlelf.xr
        sh3eb-elf/lib/ldscripts/shlelf.xs
        sh3eb-elf/lib/ldscripts/shlelf.xsc
        sh3eb-elf/lib/ldscripts/shlelf.xsce
        sh3eb-elf/lib/ldscripts/shlelf.xse
        sh3eb-elf/lib/ldscripts/shlelf.xsw
        sh3eb-elf/lib/ldscripts/shlelf.xswe
        sh3eb-elf/lib/ldscripts/shlelf.xu
        sh3eb-elf/lib/ldscripts/shlelf.xw
        sh3eb-elf/lib/ldscripts/shlelf.xwe
        share/info/as.info
        share/info/bfd.info
        share/info/binutils.info
        share/info/cpp.info
        share/info/cppinternals.info
        share/info/gcc.info
        share/info/gccinstall.info
        share/info/gccint.info
        share/info/gprof.info
        share/info/ld.info
        share/man/man1/mkg3a.1.gz
        share/man/man1/sh3eb-elf-addr2line.1
        share/man/man1/sh3eb-elf-ar.1
        share/man/man1/sh3eb-elf-as.1
        share/man/man1/sh3eb-elf-c++filt.1
        share/man/man1/sh3eb-elf-cpp.1
        share/man/man1/sh3eb-elf-dlltool.1
        share/man/man1/sh3eb-elf-elfedit.1
        share/man/man1/sh3eb-elf-g++.1
        share/man/man1/sh3eb-elf-gcc.1
        share/man/man1/sh3eb-elf-gcov-dump.1
        share/man/man1/sh3eb-elf-gcov-tool.1
        share/man/man1/sh3eb-elf-gcov.1
        share/man/man1/sh3eb-elf-gprof.1
        share/man/man1/sh3eb-elf-ld.1
        share/man/man1/sh3eb-elf-lto-dump.1
        share/man/man1/sh3eb-elf-nm.1
        share/man/man1/sh3eb-elf-objcopy.1
        share/man/man1/sh3eb-elf-objdump.1
        share/man/man1/sh3eb-elf-ranlib.1
        share/man/man1/sh3eb-elf-readelf.1
        share/man/man1/sh3eb-elf-size.1
        share/man/man1/sh3eb-elf-strings.1
        share/man/man1/sh3eb-elf-strip.1
        share/man/man1/sh3eb-elf-windmc.1
        share/man/man1/sh3eb-elf-windres.1
        share/man/man7/fsf-funding.7
        share/man/man7/gfdl.7
        share/man/man7/gpl.7
        toolchain/prizm.x
        toolchain/prizm_rules projects/OverClocker/src/Menu.cpp)
